# tree-sitter-norg

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.norg  tree-sitter-norg-scm-1.rockspec  tree-sitter-norg.wasm  tree-sitter.json
.github/: rockspec.template
.github/workflows/: fuzzing.yml  luarocks.yml  release-please.yml  tests.yml  tree-sitter-norg.rockspec.template
bindings/c/: tree-sitter-norg.pc.in
bindings/c/tree_sitter/: tree-sitter-norg.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_norg/: __init__.py  binding.c
bindings/rust/: lib.rs
docs/: NFF-0.1-spec.norg  layers.norg
nix/: overlay.nix
queries/: highlights.scm
src/: grammar.json  grammar_BACKUP_81881.json  grammar_BASE_81881.json  grammar_REMOTE_81881.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: attached_attributes.txt  attributes.txt  definitions.txt  drawers.txt  edge_cases.txt  escape.txt  extensions.txt  footnotes.txt  free_form_markup.txt  headings.txt  indent_segments.txt  indents.txt  insertions.txt  intersecting.txt  links.txt  lists.txt  macros.txt  markers.txt  markup.txt  priorities.txt  quote_test.txt  quotes.txt  ranged_markup.txt  scoped_markup.txt  tables.txt  tags.txt  timestamps.txt  todo_items.txt  todos.txt  trailing.txt  variables.txt
(+2 files in other folders)
